 - Qt: Fix open ROM dialog filtering for archive formats
 - ARM7: Fix Thumb MUL timing
 - GBA: Cap audio FIFO read size during deserialization
 - GBA: Check for corrupted savestates when loading
 - GBA: Check for improperly sized savestates when loading
 - GBA: Check for savestates made from differently sized ROMs
 - GBA Video: Fix out-of-bounds tiles in mosaic
Misc:
 - All: Fix sanitize-deb script to set file permissions properly if run as (fake)root
 - All: Enable static linking for Windows
 - All: Enable static linking for OS X
 - All: Add --help flag for command line programs
 - Qt: Show version info in window title
 - Qt: Migrate multiplayer window handling into GBAApp

0.2.1: (2015-05-13)
Bugfixes:
 - All: Fix sanitize-deb script not cleaning up after itself
 - All: Fix dependencies for libavcodec on Debian-derived platforms
 - ARM7: Handle writeback for PC in addressing modes 2 and 3
 - ARM7: Make illegal instruction decoding consistent between ARM and Thumb
 - ARM7: Fix ARM multiply instructions when PC is a destination register
 - Debugger: Fix use-after-free in breakpoint clearing code
 - Debugger: Fix boundary conditions in tab completion
 - GBA: Fix timers not updating timing when writing to only the reload register
 - GBA: Fix rewind boundary conditions
 - GBA: Add initial I/O register settings for background matrix registers
 - GBA: Fix hang when loading a savestate if sync to video is enabled
 - GBA: Handle out-of-bounds I/O access
 - GBA: Fix bounds-checking on EEPROM access
 - GBA Audio: FIFOs should not poll DMAs that are not scheduled for audio
 - GBA BIOS: Initialize a variable that may be uninitialized in very rare cases
 - GBA Memory: Allow SRAM to be 64kB
 - GBA Memory: Fix 32-bit loads from unaddress cartridge space
 - GBA Memory: Fix jumping to invalid memory when switching from Thumb to ARM
 - GBA Video: Fix second frame mode 5
 - Perf: Fix race condition if a game crashes immediately on start